# 14_PrixChangementClimatique

./: .gitignore  pyproject.toml
.github/workflows/: update-dev-duckdb.yml
data/dbt_pipeline/: README.md  dbt_project.yml  launch_data_ui.py  profiles.yml
data/dbt_pipeline/models/bronze/: azi_gaspar.sql  bronze_rei.sql  budget_communes.sql  budget_per_compte_communes.sql  catnat_gaspar.sql  ccr_details.sql  ccr_main_page.sql  datactivist_commune.sql  dicrim_gaspar.sql  geoportail_ccr_communes.sql  geoportial_ccr_communes.sql  insee_commune.sql  insee_filosofi_2021.sql  population_code_geo.sql  pprm_gaspar.sql  pprn_gaspar.sql  pprt_gaspar.sql  primes_assurances_communes.sql  recensement_com.sql  recensement_hors_com.sql  res2_insee.sql  rga.sql  risq_gaspar.sql  schema.yml  taux_chomage_communes.sql  tim_gaspar.sql
data/exploration/: README.md  analyses.ipynb  assurabilite_et_chomage.ipynb  exemple_duckdb.ipynb  ingestion_rei.ipynb  socio-climate analysis.ipynb  socio_climate analysis.ipynb
data/utils/: csv_uploader.py  download.py  download_pipeline_inputs.py  duckdb_uploader.py  ingest_budget.py  ingest_ccr.py  ingest_chomage.py  ingest_jdn.py  s3_connector.py  set_all_files_to_public_read.py
data/utils/downloaded_files/: POPULATION_MUNICIPALE_COMMUNES_FRANCE.xlsx  taux_chomage_communes.csv
website/: .gitignore  README.md  package-lock.json  package.json
website/app/map/: page.tsx
website/components/: map-pmtile.tsx
website/lib/: map-utils.ts
website/scripts/: init-dev-data.sh
