[project]
name = "14_Prix_Changement_Climatique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.49",
    "click>=8.1.8",
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.1.3",
    "duckdb-engine>=0.15.0",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "ipython-sql>=0.5.0",
    "jupysql>=0.10.17",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.2.1",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "tox>=4.34.1",
]
